--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "./node_modules/cucumber/bin/cucumber.js",
     "start": "node index.js"
   },
+  "bin": {
+    "ruffian": "bin/ruffian"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dclucas/ruffian.git"
@@ -25,11 +28,13 @@
   },
   "homepage": "https://github.com/dclucas/ruffian#readme",
   "dependencies": {
+    "cli": "^1.0.1",
     "co": "^4.6.0",
     "hapi": "^15.2.0",
     "joi": "^9.2.0",
     "ramda": "^0.22.1",
-    "uuid": "^2.0.3"
+    "uuid": "^2.0.3",
+    "winston": "^2.3.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
